# chess-engine

./: .gitignore  Cargo.toml  profile.json
chess_core/: Cargo.toml
chess_core/benches/: move_gen_benchmark.rs
chess_core/src/: algebraic_notation.rs  base_types.rs  bitboard.rs  fen.rs  file_rank.rs  lib.rs  magic_gen.rs  moves_gen.rs  precalculated.rs  types.rs  utility.rs  zobrist_hashing.rs
chess_core/tests/: move_generations.rs  move_generations_tests.rs  moves_gen_tests.rs
chess_main/: .gitignore  Cargo.toml
chess_main/src/: main.rs  sandbox_main.rs
chess_uci/: Cargo.toml
chess_uci/benches/: search_benchmark.rs  search_engine_benchmark.rs
chess_uci/src/: engine.rs  lexer.rs  lib.rs  main.rs  search_engine.rs  transposition_table.rs
chess_uci/tests/: move_generations_tests.rs
magic_gen/: Cargo.toml
magic_generator/: Cargo.toml
magic_generator/src/: main.rs
main_project/: Cargo.toml
main_project/src/: main.rs  test_cases.rs
performance_demo/: Cargo.toml  profile.json
performance_demo/src/: main.rs
sandbox/src/: main.rs  test_cases.rs
src/: base_types.rs  constants.rs  file_rank.rs  game.rs  magic_gen.rs  main.rs  moves.rs  moves_gen.rs  precalculated.rs  types.rs  utility.rs
