[package]
name = "chess_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = { version = "^0.4.0", features = ["html_reports"] }
[[bench]]
name = "move_gen_benchmark"
harness = false

[dependencies]
rand = "0.8.5"
rand_pcg = "0.3.1"