[package]
name = "chess_uci"
version = "0.1.0"
edition = "2021"
[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = { version = "^0.4.0", features = ["html_reports"] }
[[bench]]
name = "search_benchmark"
harness = false

[dependencies]
chess_core = { path = "../chess_core" }
rayon = "1.10.0"
